I updated the view to be formatted more correctly (not CSS wise, but with the formatting). I also changed _form to have labels on the same line as form boxes. I still need to format it for spacing though. I need to implement validation, email, and images for links. I'm working on validation next.

--- a/project04/app/assets/stylesheets/articles.css.scss
+++ b/project04/app/assets/stylesheets/articles.css.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+h1 { text-align:center }
+h3 { text-align:center }
+.articles {
+  table {
+    border-collapse: collapse;
+  }
+
+  table tr td {
+    padding: 5px;
+    vertical-align: top;
+  }
+
+  .list_line_even {
+    background:   #E0F8F8;
+  }
+
+  .list_line_odd {
+    background:   #f8b0f8;
+  }
+}
